- Fixed footer alignment.

--- a/themes/timer-hugo/assets/css/style.css
+++ b/themes/timer-hugo/assets/css/style.css
@@ -373,6 +373,7 @@ a:hover {
   font-weight: 300;
   font-family: 'Roboto', sans-serif;
   margin-top: 20px;
+  text-align: center;
 }
 
 #call-to-action .block .btn-contact {
